force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description
  >This table holds the data for the subscription to a listing of a given user&apos;s org</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>