force-app/main/default/objects/Subscription__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <description>Date the subscription was activated</description>
    <label>ActivationDate</label>
    <type>DateTime</type>
</CustomField>