force-app/main/default/objects/Subscription__c/fields/AmountDiscountedByCoupon__c.field-meta.xml
<CustomField>
    <fullName>AmountDiscountedByCoupon__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount discounted by coupon</description>
    <label>AmountDiscountedByCoupon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>