force-app/main/default/objects/Subscription__c/fields/ApplicationFeePercentage__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFeePercentage__c</fullName>
    <description
  >Application Fee Percentage is set depending on which Payment Method the customer use to pay the subscription. It could be card, bank or sepa debit</description>
    <inlineHelpText
  >Application Fee Percentage is set depending on which Payment Method the customer use to pay the subscription. It could be card, bank or sepa debit</inlineHelpText>
    <label>Application Fee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>