force-app/main/default/objects/Subscription__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Date the subscripion was cancelled</description>
    <label>CancellationDate</label>
    <type>DateTime</type>
</CustomField>