force-app/main/default/objects/Subscription__c/fields/chargeVAT__c.field-meta.xml
<CustomField>
    <fullName>chargeVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether VAT Percentage should be charged.</description>
    <label>chargeVAT</label>
    <type>Checkbox</type>
</CustomField>