force-app/main/default/objects/Subscription__c/fields/CheckForCouponData__c.field-meta.xml
<CustomField>
    <fullName>CheckForCouponData__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicator to check for coupon data when subscription has been created via push notification.</description>
    <label>CheckForCouponData</label>
    <type>Checkbox</type>
</CustomField>