force-app/main/default/objects/Subscription__c/fields/CouponDiscountType__c.field-meta.xml
<CustomField>
    <fullName>CouponDiscountType__c</fullName>
    <description
  >the type of discount a coupon applies to the subscription</description>
    <label>CouponDiscountType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dollars</fullName>
                <default>true</default>
                <label>dollars</label>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>