force-app/main/default/objects/Subscription__c/fields/CouponLifeSpan__c.field-meta.xml
<CustomField>
    <fullName>CouponLifeSpan__c</fullName>
    <description
  >The lifespan of the coupon applied to the subscription</description>
    <label>CouponLifeSpan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Forever</fullName>
            </value>
            <value>
                <fullName>Limited Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>