force-app/main/default/objects/Subscription__c/fields/CurrentPeriodEndsAt__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriodEndsAt__c</fullName>
    <description
  >End of the current period that the subscription has been invoiced for</description>
    <label>CurrentPeriodEndsAt</label>
    <type>DateTime</type>
</CustomField>