force-app/main/default/objects/Subscription__c/fields/CurrentPeriodStartsAt__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriodStartsAt__c</fullName>
    <description
  >Start of the current period that the subscription has been invoiced for.</description>
    <label>CurrentPeriodStartsAt</label>
    <type>DateTime</type>
</CustomField>