force-app/main/default/objects/Subscription__c/fields/CustomerOrgId__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrgId__c</fullName>
    <description>The Customer OrgId of the subscription.</description>
    <label>CustomerOrgId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>