force-app/main/default/objects/Subscription__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Date the subscription expires</description>
    <label>ExpirationDate</label>
    <type>DateTime</type>
</CustomField>