force-app/main/default/objects/Subscription__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ExternalId</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>