force-app/main/default/objects/Subscription__c/fields/IntervalLength__c.field-meta.xml
<CustomField>
    <fullName>IntervalLength__c</fullName>
    <description>Interval count for the given Frequency</description>
    <label>IntervalLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>