force-app/main/default/objects/Subscription__c/fields/Licenses_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set to true once licenses are provisioned if the Collect Payment Before Install is false and we receive a push notification from Recurly of type new subscription</description>
    <label>Licenses Provisioned</label>
    <type>Checkbox</type>
</CustomField>