force-app/main/default/objects/Subscription__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>Listing</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipLabel>SubscriptionsPlans</relationshipLabel>
    <relationshipName>SubscriptionsPlans</relationshipName>
    <type>Lookup</type>
</CustomField>