force-app/main/default/objects/Subscription__c/fields/NoOfTimesCouponApplies__c.field-meta.xml
<CustomField>
    <fullName>NoOfTimesCouponApplies__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >If the coupon has limited life span the no of times the coupon applies to the subscription</description>
    <label>NoOfTimesCouponApplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>