force-app/main/default/objects/Subscription__c/fields/NoOfUnits__c.field-meta.xml
<CustomField>
    <fullName>NoOfUnits__c</fullName>
    <description>Number of units subscribed to</description>
    <label>NoOfUnits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>