force-app/main/default/objects/Subscription__c/fields/NoOfUnitsPending__c.field-meta.xml
<CustomField>
    <fullName>NoOfUnitsPending__c</fullName>
    <description
  >Number of units subscribed to in the next billing cycle</description>
    <label>NoOfUnits Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>