force-app/main/default/objects/Subscription__c/fields/PackageId__c.field-meta.xml
<CustomField>
    <fullName>PackageId__c</fullName>
    <description>Id of the package it is subscribed to</description>
    <label>PackageId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>