force-app/main/default/objects/Subscription__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>