force-app/main/default/objects/Subscription__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <description>Shipping address postal code</description>
    <inlineHelpText>Shipping address postal code</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>