force-app/main/default/objects/Subscription__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <description>State of shipping address</description>
    <inlineHelpText>State of shipping address</inlineHelpText>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>