force-app/main/default/objects/Subscription__c/fields/ShippingStreet1__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet1__c</fullName>
    <description>First line of shipping street address.</description>
    <inlineHelpText>First line of shipping street address.</inlineHelpText>
    <label>Shipping Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>