force-app/main/default/objects/Subscription__c/fields/ShippingStreet2__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet2__c</fullName>
    <description>Second line of shipping address street.</description>
    <label>Shipping Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>