force-app/main/default/objects/Subscription__c/fields/SubscriptionExternalId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SubscriptionExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>