force-app/main/default/objects/Subscription__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <description
  >Tax Rate applied for the actual subscription. Introduced for USST but could be used for VAT.</description>
    <inlineHelpText
  >Tax Rate applied for the subscription Shipping Address. This value comes from Avalara Service</inlineHelpText>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>