force-app/main/default/objects/Subscription__c/fields/TempStripePlanId__c.field-meta.xml
<CustomField>
    <fullName>TempStripePlanId__c</fullName>
    <label>TempStripePlanId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>