force-app/main/default/objects/Subscription__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <description
  >Total Amount of the Subscription. (unit_amount_in_cents in Recurly System).</description>
    <label>TotalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>