force-app/main/default/objects/Subscription__c/fields/TrialEndsAt__c.field-meta.xml
<CustomField>
    <fullName>TrialEndsAt__c</fullName>
    <label>TrialEndsAt</label>
    <type>DateTime</type>
</CustomField>