force-app/main/default/objects/Subscription__c/fields/TrialLengthInDays__c.field-meta.xml
<CustomField>
    <fullName>TrialLengthInDays__c</fullName>
    <description>Trial days available for this subscription</description>
    <label>TrialLengthInDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>