force-app/main/default/objects/Subscription__c/fields/TrialStartedAt__c.field-meta.xml
<CustomField>
    <fullName>TrialStartedAt__c</fullName>
    <label>TrialStartedAt</label>
    <type>DateTime</type>
</CustomField>