force-app/main/default/objects/Subscription__c/fields/vatNumber__c.field-meta.xml
<CustomField>
    <fullName>vatNumber__c</fullName>
    <label>vatNumber</label>
    <length>18</length>
    <type>Text</type>
</CustomField>