force-app/main/default/objects/Subscription__c/recordTypes/Listing.recordType-meta.xml
<RecordType>
    <fullName>Listing</fullName>
    <active>true</active>
    <label>Listing</label>
</RecordType>