force-app/main/default/objects/Subscription__c/recordTypes/SecurityReview.recordType-meta.xml
<RecordType>
    <fullName>SecurityReview</fullName>
    <active>true</active>
    <label>SecurityReview</label>
</RecordType>